# tellonym-clone-backend

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
entity/: Cargo.toml
entity/src/entities/: answer.rs  follow.rs  like.rs  mod.rs  prelude.rs  question.rs  test_num.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20221124_121057_create_schema.rs  m20221124_130924_create_schema2.rs
src/: cors.rs  error.rs  jwt_util.rs  main.rs  pool.rs  query.rs  user_guard.rs
src/ops/: mod.rs  mutation.rs  query.rs
src/routes/: login_routes.rs  mod.rs  questions_routes.rs  user_routes.rs
