[package]
name = "tellonym-clone-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm =  { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
rocket = "0.5.0-rc.2"
sea-orm-rocket = "0.5.2"
async-trait = { version = "0.1" }
