[package]
name = "tellonym-clone-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm =  { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
sea-orm-rocket = "0.5.2"
async-trait = { version = "0.1" }
serde = { version = "1.0", features = [ "derive" ] }
chrono = "0.4.23"
serde_json = "1.0.89"
